# Anykaka-slam-14-ros2-learning

./: .gitignore  README.md  command_colcon.sh
interface/: CMakeLists.txt  README.md  package.xml
interface/include/interface/common/: singleton.hpp  test_interface.hpp
interface/src/: main.cc
src/simulator/gazebo_simulator/: CMakeLists.txt  README.md  package.xml
src/simulator/gazebo_simulator/config/: entrance_pointcloud_transformer.yaml  scout_params.yaml
src/simulator/gazebo_simulator/launch/: entrance_simulator.launch.py  pointcloud_transformer.launch.py  scout_patrol_launch.py
src/simulator/gazebo_simulator/rviz/: entrance.rviz  scout_robot.rviz
src/simulator/gazebo_simulator/src/: pointcloud_transformer.cpp  scout_patrol_node.cpp
src/simulator/gazebo_simulator/urdf/entrance/: laser-robosense-airy-180.urdf.xacro  robot.xacro
src/simulator/gazebo_simulator/urdf/scout_robot/: base_link_macro.urdf.xacro  gazebo_ros_ray_sensor.urdf.xacro  laser-robosense-airy-360.urdf.xacro  robot.xacro
src/simulator/gazebo_simulator/world/entrance/: entrance.world  model.config  model.sdf
src/simulator/gazebo_simulator/world/scout_robot/: world.world
src/simulator/gazebo_simulator/world/scout_robot/XiaoHongShanBuild/: model.config  model.sdf
src/slam-14/lecture_10/: CMakeLists.txt  package.xml
src/slam-14/lecture_11/: CMakeLists.txt  package.xml
src/slam-14/lecture_11/src/: main.cc
src/slam-14/lecture_12/: CMakeLists.txt  package.xml
src/slam-14/lecture_4/: CMakeLists.txt  package.xml
src/slam-14/lecture_4/include/lecture_4/: sophus_test.hpp
src/slam-14/lecture_4/src/: main.cc
src/slam-14/lecture_5/: CMakeLists.txt  package.xml
src/slam-14/lecture_5/include/lecture_5/: 3d_vision.hpp  camera_image.hpp
src/slam-14/lecture_5/src/: main.cc
src/slam-14/lecture_6/: CMakeLists.txt  package.xml
src/slam-14/lecture_6/include/lecture_6/: curve_fitting.hpp
src/slam-14/lecture_6/src/: main.cc
src/slam-14/lecture_7/: CMakeLists.txt  package.xml
src/slam-14/lecture_7/include/lecture_7/: feature_extracte_matching.hpp
src/slam-14/lecture_7/src/: main.cc
src/slam-14/lecture_8/: CMakeLists.txt  package.xml
src/slam-14/lecture_9/: CMakeLists.txt  package.xml
